Bu fixing: Hero text align and check image

--- a/components/heroes/_heroes.scss
+++ b/components/heroes/_heroes.scss
@@ -16,19 +16,28 @@
         padding-top: 50px;
     }
     &__text-container{
-        margin-top: 60px;
+        text-align: left;
+        margin-top: 120px;
+        margin-left: 10%;
         display: flex;
         flex-direction: column;
         justify-content: center;
+        @include media(mobile-s){
+            text-align: initial;
+            max-width: 372px;
+        }
         @include media(tablet){
+            margin-left: initial;
             margin-top: initial;
             max-width: 720px;
             height: 500px;
         }
         @include media(desktop-s){
+            margin-top: initial;
             max-width: 940px;
         }
         @include media(desktop-m){
+            margin-top: initial;
             max-width: 1140px;
         }
     }
