--- a/components/navbars/_navbars.scss
+++ b/components/navbars/_navbars.scss
@@ -23,13 +23,27 @@ header{
     padding: 0;
     height: 29px;
     width: 89px;
+    margin-left: 30px;
     @include media(tablet){
         height: 41px;
         width: 132px;
         padding-top: 20px;
-
+        margin-left: initial;
     }
 }
+
+.header-hamburger{
+    margin-right: 30px;
+    img{
+        margin-right: initial;
+        height: 31px;
+        width: 31px;
+    }
+    @include media(tablet){
+        display: none;
+    }
+}
+
 .navigation{
     align-self: center;
     width: 50px;
