--- a/components/plans/_plans.scss
+++ b/components/plans/_plans.scss
@@ -7,14 +7,14 @@
 .plans-container{
     display: block;
     flex-wrap: wrap;
-    justify-content: space-evenly;
     max-width: 400px;
     margin-top: 25px;
     margin-left: auto;
     margin-right: auto;
     @include media(desktop-m){
+        justify-content: center;
         display: flex;
-        max-width: 1400px;
+        max-width: 1140px;
     }
 }
 .plans{
@@ -74,7 +74,6 @@
     &__binieta{
         height: 24px;
         width: 24px;
-        display: inline;
         padding: 0 10px 0 0;
     }
     &__cta-link{
