--- a/css/styles.css
+++ b/css/styles.css
@@ -83,12 +83,28 @@ header {
   padding: 0;
   height: 29px;
   width: 89px;
+  margin-left: 30px;
 }
 @media only screen and (min-width: 768px) {
   .header__logo {
     height: 41px;
     width: 132px;
     padding-top: 20px;
+    margin-left: initial;
+  }
+}
+
+.header-hamburger {
+  margin-right: 30px;
+}
+.header-hamburger img {
+  margin-right: initial;
+  height: 31px;
+  width: 31px;
+}
+@media only screen and (min-width: 768px) {
+  .header-hamburger {
+    display: none;
   }
 }
 
@@ -142,13 +158,16 @@ header {
   }
 }
 .hero__text-container {
-  margin-top: 60px;
+  text-align: left;
+  margin-top: 120px;
+  margin-left: 10%;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 @media only screen and (min-width: 768px) {
   .hero__text-container {
+    margin-left: initial;
     margin-top: initial;
     max-width: 720px;
     height: 500px;
@@ -156,11 +175,13 @@ header {
 }
 @media only screen and (min-width: 992px) {
   .hero__text-container {
+    margin-top: initial;
     max-width: 940px;
   }
 }
 @media only screen and (min-width: 1200px) {
   .hero__text-container {
+    margin-top: initial;
     max-width: 1140px;
   }
 }
@@ -285,7 +306,6 @@ header {
 .plans-container {
   display: block;
   flex-wrap: wrap;
-  justify-content: space-evenly;
   max-width: 400px;
   margin-top: 25px;
   margin-left: auto;
@@ -293,8 +313,9 @@ header {
 }
 @media only screen and (min-width: 1200px) {
   .plans-container {
+    justify-content: center;
     display: flex;
-    max-width: 1400px;
+    max-width: 1140px;
   }
 }
 
@@ -356,7 +377,6 @@ header {
 .plans__binieta {
   height: 24px;
   width: 24px;
-  display: inline;
   padding: 0 10px 0 0;
 }
 .plans__cta-link {
