--- a/utils/_breakpoints.scss
+++ b/utils/_breakpoints.scss
@@ -4,6 +4,10 @@
 
 @mixin media ($breakpoint) {  
 
+  @if $breakpoint == mobile {
+    @media only screen and (min-width: 375px) { @content; }  
+  }
+
   @if $breakpoint == tablet {  
     @media only screen and (min-width: 768px) { @content; }  
   }  
